--- a/index.html
+++ b/index.html
@@ -3,9 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hola mundo!</title>
+    <title>Razonamiento Cuantitativo 1</title>
+    <meta name="description" content="Herramienta educativa para clasificar numeros en conjuntos(naturales,enteros,racionales) y resolver operaciones aritmeticas con operaciones paso a paso ">
+    <link rel="stylessheet" href="css/styles.css">
 </head>
 <body>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora quia in dicta inventore quaerat dolor suscipit. Perferendis ducimus eum tempore cupiditate voluptates odio itaque molestiae officia nemo. Quisquam, perferendis error.</p>
+    <div class="principal">
+        <nav class="opciones-nav" role="tablist">
+            <button class="tab-btn" role="tab">
+                <span class="nav-tab-text">Conjuntos de Numeros</span> 
+            </button>
+            
+            <button class="tab-btn" role="tab">
+                <span class="nav-tab-text">Operaciones Aritmeticas</span>
+            </button>
+
+            <button class="tab-btn" role="tab">
+               <span class="nav-tab-text">:)</span>
+            </button>
+
+        </nav>
+
+        <section id="panel-clasificar" class="tab-panel active">
+            <div class="card">
+                <h2>Clasificador de conjunto de numeros</h2>
+                <p>Ingresa un numero y selecciona un conjunto para verificar si pertenece a el</p>
+            </div>
+            <input type="text" id="numero-input">
+
+
+            <select id="select-conjuntos">
+                <option value="Naturales">Naturales</option>
+                <option value="Enteros">Enteros</option>
+                <option value="Racionales">Racionales</option>
+            </select>
+
+
+
+
+        </section>
+        <h1>hola mundo</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora quia in dicta inventore quaerat dolor suscipit. Perferendis ducimus eum tempore cupiditate voluptates odio itaque molestiae officia nemo. Quisquam, perferendis error.</p>
+    </div>
 </body>
 </html>
