--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Razonamiento Cuantitativo 1</title>
     <meta name="description" content="Herramienta educativa para clasificar numeros en conjuntos(naturales,enteros,racionales) y resolver operaciones aritmeticas con operaciones paso a paso ">
-    <link rel="stylessheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
